zapis i odczyt z pliku
rzuca wyjątkami jak się zły plik weźmie, ale da się używać

--- a/SMiP/src/smip/PetriGraphGUI.form
+++ b/SMiP/src/smip/PetriGraphGUI.form
@@ -31,6 +31,9 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
               <Properties>
+                <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
+                  <KeyStroke key="Ctrl+S"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Zapisz sie&#x107;"/>
               </Properties>
               <Events>
@@ -39,6 +42,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
               <Properties>
+                <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
+                  <KeyStroke key="Ctrl+O"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Wczytaj sie&#x107;"/>
               </Properties>
               <Events>
