--- a/SMiP/src/smip/PetriGraphGUI.form
+++ b/SMiP/src/smip/PetriGraphGUI.form
@@ -163,6 +163,7 @@
                       <Component id="jButton1" alignment="0" max="32767" attributes="0"/>
                       <Component id="jButtonCoverabilityGraph" alignment="0" max="32767" attributes="0"/>
                       <Component id="jButtonBoundedness" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jButtonConservation" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -185,7 +186,9 @@
                   <Component id="jButtonCoverabilityGraph" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jButtonBoundedness" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="107" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jButtonConservation" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="78" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="lblDelayVal" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -291,6 +294,14 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonBoundednessActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="jButtonConservation">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Zachowawczo&#x15b;&#x107; sieci"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonConservationActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
